--- a/prismatic.css
+++ b/prismatic.css
@@ -131,13 +131,13 @@ p, ul, ol, dl, q {
 
 /* Button
  * ------ */
-.Button { background: transparent url('button.png') 0 0px no-repeat; cursor: pointer;
+.Button { background: transparent url('images/button.png') 0 0px no-repeat; cursor: pointer;
 	display: inline-block; color: #111; font-weight: normal; height: 23px;
 	margin-bottom: -1px; margin-right: 10px; text-decoration: none; }
 .Button:hover { background-color: transparent; color: #111; margin: 0; margin-bottom: -1px;
 	margin-right: 10px; padding: 0; }
 .Button span {
-	background: transparent url('button.png') 100% -23px no-repeat; display: inline-block;
+	background: transparent url('images/button.png') 100% -23px no-repeat; display: inline-block;
 	font-weight: bold; height: 23px; margin-bottom: -1px;
 	margin-left: 10px; margin-right: -10px; padding-right: 10px; }
 
@@ -147,7 +147,7 @@ p, ul, ol, dl, q {
 	background-color: #ffc; border: 1px solid #e9e900;
 	border-left-width: 0; border-right-width: 0;
 	margin: 0 1px; overflow: visible; position: relative; }
-.speech_arrow_tl { background-image: url('arrow_up.png'); height: 8px; left: 40px;
+.speech_arrow_tl { background-image: url('images/arrow_up.png'); height: 8px; left: 40px;
 	margin-top: -8px; position: absolute; width: 16px; }
 .speech_content {
 	border: 1px solid #e9e900; border-bottom-width: 0;
