--- a/prismatic.css
+++ b/prismatic.css
@@ -56,44 +56,49 @@ p, ul, ol, dl, q { margin-bottom: .8em; }
  * ========================================================================= */
 
 
-/* WideBoard
- * --------- */
-.wideboard { padding: 1em 0 1.5em; }
+/* Area
+ * ---- */
+.Area { _zoom: 1; }
+.Area:after { clear: both; content: "."; display: block;
+	height: 0; visibility: hidden; }
 
 
 /* Wrapper
  * ------- */
 .Wrapper { margin: 0 auto; padding: 0 5px; width: 950px; }
-.wrapper_first { margin-top: 1em; }
-.wrapper_inner { margin: 0; padding: 0 10px; width: auto; }
-/* Extentions */
 .fluid { padding: 0 2%; width: 96%; }
+	/* Those two lines need to be edited and moved: */
+	.wrapper_first { margin-top: 1em; }
+	.wrapper_inner { margin: 0; padding: 0 10px; width: auto; }
 
 
 /* Block
  * ----- */
-.Block { margin: 0 auto 1em; overflow: hidden; }
-/* Extentions */
+.Block { margin: 0 auto 1em; overflow: auto; _overflow: visible; _zoom: 1; }
+.Block:after { clear: both; content: "."; display: block;
+	height: 0; visibility: hidden; }
+/* Extentions (probably have to be moved) */
 .narrowed { padding: 0 40px; }
 .cramped { padding: 0 80px; }
 
 
-/* Unit
+/* Divide
  * ---- */
-.Unit { float: left; }
-.UnitAlt { float: right; }
+.Divide { float: left; overflow: auto; _overflow: visible; _zoom: 1; }
+
 /* Extentions */
-.w1of2 { width: 48.5%; margin-right: 3%; }
-.w1of3 { width: 30%; margin-right: 5%; }
-.w2of3 { width: 65%; margin-right: 5%; }
-.w1of5 { width: 16%; margin-right: 5%; }
-.w2of5 { width: 37%; margin-right: 5%; }
-.w3of5 { width: 58%; margin-right: 5%; }
-.w4of5 { width: 79%; margin-right: 5%; }
+.by2 { width: 48.5%; margin-right: 3%; }
+.by3 { width: 30%; margin-right: 5%; }
+.by3x2 { width: 65%; margin-right: 5%; }
+.by5 { width: 16%; margin-right: 5%; }
+.by5x2 { width: 37%; margin-right: 5%; }
+.by5x3 { width: 58%; margin-right: 5%; }
+.by5x4 { width: 79%; margin-right: 5%; }
 .last { float: none; _left: -3px; margin-left: 0; margin-right: 0; _margin-right: -3px;
-	overflow: hidden; _position: relative; width: auto; }
-.Unit.wfree { margin-right: 5%; }
-.UnitAlt.wfree { margin-left: 5%; }
+	overflow: hidden; _position: relative; width: auto; _zoom: 1; }
+.then_blow { float: right; }
+.Divide.alone { margin-right: 5%; } /* lacks margin-bottom */
+.Divide.then_blow.alone { margin-left: 5%; } /* lacks margin-bottom */
 
 
 
@@ -144,8 +149,9 @@ a.Img:hover { background-color: transparent; color: transparent;
 .overflowing { overflow: visible; }
 
 .clear { clear: both; }
-.clearfix, .Block, .last, .Button { _zoom: 1; }
-.Board:after, .Block:after, .clearfix:after { clear: both; content: "."; display: block;
+
+.clearfix, .Button { _zoom: 1; }
+.clearfix:after { clear: both; content: "."; display: block;
 	height: 0; visibility: hidden; }
 
 .hidden { display: none; }
