--- a/prismatic.css
+++ b/prismatic.css
@@ -28,77 +28,29 @@ ins{text-decoration:none;}del{text-decoration:line-through;}/*Define styles*/
 
 /* LAYOUT SYSTEM */
 
-/* Area and global layout rules */
-.Area,.Wrapper,.Block,.clearfix{_zoom:1;}
-.Area:after,.Wrapper:after,.Block:after,.clearfix:after{clear:both;content:".";display:block;height:0;visibility:hidden;}
-
-/* Wrapper */
-.Wrapper{margin:0 auto;padding:0 5px;width:950px;}
-.fluid{padding:0 2%;width:96%;}
-	/* Those two lines need to be edited and moved: */
-	.wrapper_first { margin-top: 1em; }
-	.wrapper_inner { margin: 0; padding: 0 10px; width: auto; }
-
-/* Block */
-.Block{margin:0 auto 1em;}
-/* Extentions (probably have to be moved) */
-.narrowed{padding:0 40px;}
-.cramped{padding:0 80px;}
-
-/* Divide */
-.Divide{float:left;_zoom:1;}
-.by2{width:48.5%;margin-right:3%;}
-.by3{width:30%;margin-right:5%;}
-.by3x2{width:65%;margin-right:5%;}
-.by5{width:16%;margin-right:5%;}
-.by5x2{width:37%;margin-right:5%;}
-.by5x3{width:58%;margin-right:5%;}
-.by5x4{width:79%;margin-right:5%;}
-.return{float:none;_left:-3px;margin-left:0;margin-right:0;_margin-right:-3px;overflow:visible;_position:relative;width:auto;_zoom:1;}
-.then_blow{float:right;}
-.Divide.alone{margin-right:5%;}/*lacks margin-bottom*/
-.Divide.then_blow.alone{margin-left:5%;}/*lacks margin-bottom*/
-
+/* Area and global layout rules */.Area,.Wrapper,.Block,.clear{_zoom:1;}.Area:after,.Wrapper:after,.Block:after,.clear:after{clear:both;content:".";display:block;height:0;visibility:hidden;}
+/* Wrapper */.Wrapper{margin:0 auto;padding:0 5px;width:950px;}.fluid{padding:0 2%;width:96%;}.wrapper_child{padding:0 10px;width:auto;}
+/* Block */.Block{margin:0 auto 1em;}
+/* Divide */.Divide{float:left;_zoom:1;}.by2{width:48.5%;margin-right:3%;}.by3{width:30%;margin-right:5%;}.by3x2{width:65%;margin-right:5%;}.by5{width:16%;margin-right:5%;}.by5x2{width:37%;margin-right:5%;}.by5x3{width:58%;margin-right:5%;}.by5x4{width:79%;margin-right:5%;}.return{float:none;_left:-3px;margin-left:0;margin-right:0;_margin-right:-3px;_position:relative;width:auto;_zoom:1;}.then_blow{float:right;}.Divide.alone{margin-right:.7em;}.Divide.then_blow.alone{margin-left:.7em;}
 
 
 /* OBJECTS */
 
-/* Rounder
- * ------- */
-.Rounded { height: 1px; margin: 0 1px; }
-.rounder { margin: 0 2px; }
-
-
-/*Button(to redo)*/.Button{background:transparent url('images/button.png')0 0px no-repeat;cursor:pointer;display:inline-block;color:#111;font-weight:normal;height:23px;margin-bottom:-1px;margin-right:10px;text-decoration:none;_zoom:1;}.Button:hover{background-color:transparent;color:#111;margin:0;margin-bottom:-1px;margin-right:10px;padding:0;}.Button span{background:transparent url('images/button.png')100%-23px no-repeat;display:inline-block;font-weight:bold;height:23px;margin-bottom:-1px;margin-left:10px;margin-right:-10px;padding-right:10px;}
-
-/*Bubble(to redo)*/.Speech{background-color:#ffc;border:1px solid#e9e900;border-left-width:0;border-right-width:0;margin:0 1px;overflow:visible;position:relative;}.speech_arrow_tl{background-image:url(images/arrow_up.png);height:8px;left:40px;margin-top:-8px;position:absolute;width:16px;}.speech_content{border:1px solid#e9e900;border-bottom-width:0;border-top-width:0;margin:0-1px;padding:.2em.5em;}
+/* RoundedCorners */.Rounded{height:1px;margin:0 1px;}.rounder{margin:0 2px;}
+/* Button (to redo) */.Button{background:transparent url('images/button.png')0 0px no-repeat;cursor:pointer;display:inline-block;color:#111;font-weight:normal;height:23px;margin-bottom:-1px;margin-right:10px;text-decoration:none;_zoom:1;}.Button:hover{background-color:transparent;color:#111;margin:0;margin-bottom:-1px;margin-right:10px;padding:0;}.Button span{background:transparent url('images/button.png')100%-23px no-repeat;display:inline-block;font-weight:bold;height:23px;margin-bottom:-1px;margin-left:10px;margin-right:-10px;padding-right:10px;}
+/* Bubble (to redo) */.Speech{background-color:#ffc;border:1px solid#e9e900;border-left-width:0;border-right-width:0;margin:0 1px;overflow:visible;position:relative;}.speech_arrow_tl{background-image:url(images/arrow_up.png);height:8px;left:40px;margin-top:-8px;position:absolute;width:16px;}.speech_content{border:1px solid#e9e900;border-bottom-width:0;border-top-width:0;margin:0-1px;padding:.2em.5em;}
 
 
 /* GENERIC RULES */
 
-.center{text-align:center;}
-.hidden{display:none;}
-.nobottom{margin-bottom:0;}
-.right{text-align:right;}
-
-.overflowing { overflow: visible; } /*Maybe good for deletion*/
-
-/* Inline Styles */
-.highlight { background-color: #ffc; }
-.legal_writing { font-size: .7em; line-height: 1.1em; }
+.center{text-align:center;}.cramped{padding:0 80px;}.hidden{display:none;}.left{text-align:left;}.narrowed{padding:0 40px;}.nobottom{margin-bottom:0;}.right{text-align:right;}.top{margin-top:1em;}
+/* Writing Styles */
+.write_fancy{}
+.write_highlighted{background-color:#ffc;padding-left:2em;padding-right:2em;}
+.write_legal{font-size:.7em;line-height:1.1em;}
 
 
-/* Skins */
-.theme_dark { background-color: #111;
-	border-bottom: 2px solid #99997F;
-	color: #eed; }
-.theme_dark h1 { color: #99997F; }
-.theme_dark h2 { color: #85856F; }
-.theme_dark h3 { color: #70705E; }
-.theme_dark h4 { color: #5C5C4D; }
-.theme_dark h5 { color: #47473D; }
-.theme_dark h6 { color: #33332D; }
-.theme_dark hr { border-color: #99997F; }
+/* SKINS */
 
-.theme_neutral { background-color: #f7f7f7; }
-.theme_neutral, .theme_neutral .speech_content { border-color: #ddd; }
+/* Dark (to redo) */.theme_dark{background-color:#111;color:#eed;}.theme_dark h1{color:#99997F;}.theme_dark h2{color:#85856F;}.theme_dark h3{color:#70705E;}.theme_dark h4{color:#5C5C4D;}.theme_dark h5{color:#47473D;}.theme_dark h6{color:#33332D;}.theme_dark hr{border-color:#99997F;}
+/* Neutral (to redo) */.theme_neutral{background-color:#f7f7f7;}.theme_neutral,.theme_neutral .speech_content{border-color:#ddd;}
