--- a/prismatic.css
+++ b/prismatic.css
@@ -4,8 +4,9 @@ http://www.deime.net/prismatic
 */
 
 /* DEFAULT BEHAVIORS */
-address,blockquote,body,caption,code,dd,del,div,dl,dt,fieldset,form,html,h1,h2,h3,h4,h5,h6,iframe,img,input,ins,legend,li,object,ol,p,pre,table,tbody,td,textarea,tfoot,th,thead,tr,ul{line-height:1.4em;margin:0;padding:0;}
+address,blockquote,body,caption,code,dd,del,div,dl,dt,fieldset,form,html,h1,h2,h3,h4,h5,h6,iframe,img,input,ins,legend,li,object,p,pre,table,tbody,td,textarea,tfoot,th,thead,tr{line-height:1.4em;margin:0;padding:0;}
 
+ol,ul{margin-top:0;margin-bottom:0;}
 body,legend{background:#fff;color:#222;font:normal 1em "Trebuchet MS",sans-serif;line-height:1em;}
 h1{color:#000;font-size:3.0em;letter-spacing:-.05em;}h2{color:#262626;font-size:1.8em;}h3{color:#4C4C4C;font-size:1.3em;}h4{color:#737373;font-size:1.1em;}h5{color:#999;font-size:1.0em;}h6{color:#BFBFBF;font-size:0.9em;letter-spacing:.1em;}h1,h2,h3,h4,h5,h6{font-weight:bold;line-height:1em;margin-bottom:0.5em;}
 hr{border-width:0;border-bottom:.18em dashed #0cf;margin-top:2em;margin-bottom:1em;}
@@ -14,25 +15,17 @@ abbr,acronym{border:0;font-variant:normal;}
 sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}/*Define styles for this*/
 button,input,select,textarea{font-family:inherit;font-size:inherit;font-weight:inherit;}
 code,kbd,pre,samp,tt{font-family:monospace;font-size:1em;line-height:1em;}
-pre{overflow:scroll;}
+pre{overflow-x:scroll;border:.5em solid#eee;padding:1em;}
 table{border-collapse:collapse;border-spacing:0;}
-blockquote,dl,ol,p,q,ul{margin-bottom:.8em;}
 fieldset,img{border:0;}
 address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}
-blockquote,q{quotes:none;}/*Is it possible to delete this line?*/
-q { border-left: .5em solid #ffc; padding-left: 1em; }/*Rework on this*/
-blockquote:before,blockquote:after,q:before,q:after{content:'';}/*Is it possible to delete the blockquote selector?*/
-ol,ul{margin-left:1.5em;}/*Is it possible to remove this, and let the default margins ?*/
+q{}blockquote{}/*Rework on this*/
+blockquote:before,blockquote:after,q:before,q:after{content:'';}blockquote,q{quotes:none;}
 ins{text-decoration:none;}del{text-decoration:line-through;}/*Define styles*/
+blockquote,dl,ol,p,pre,q,ul{margin-bottom:.8em;}
 
 
-/* LAYOUT SYSTEM */
-
-/* Area and global layout rules */.Area,.Wrapper,.Block,.clear{_zoom:1;}.Area:after,.Wrapper:after,.Block:after,.clear:after{clear:both;content:".";display:block;height:0;visibility:hidden;}
-/* Wrapper */.Wrapper{margin:0 auto;padding:0 5px;width:950px;}.fluid{padding:0 2%;width:96%;}.Wrapper>.inner{padding:0 10px;width:auto;}
-/* Block */.Block{margin:0 auto 1em;}
-/* Divide */.Divide{float:left;_zoom:1;}.by2{width:48.5%;margin-right:3%;}.by3{width:30%;margin-right:5%;}.by3x2{width:65%;margin-right:5%;}.by5{width:16%;margin-right:5%;}.by5x2{width:37%;margin-right:5%;}.by5x3{width:58%;margin-right:5%;}.by5x4{width:79%;margin-right:5%;}.return{_left:-3px;margin-right:0;_margin-right:-3px;_position:relative;_zoom:1;}.then_blow{float:right;}.Divide.alone{margin-right:.7em;}.Divide.then_blow.alone{margin-left:.7em;}
-
+/* LAYOUT SYSTEM */.Area,.Wrapper,.Block,.clearfix{_zoom:1;}.Area:after,.Wrapper:after,.Block:after,.clearfix:after{clear:both;content:".";display:block;height:0;visibility:hidden;}.Wrapper{margin:0 auto;padding:0 5px;width:950px;}.fluid{padding:0 2%;width:96%;}.Wrapper>.inner{padding:0 10px;width:auto;}.Block{margin:0 auto 1em;}.Divide{float:left;_zoom:1;}.by2{width:48.5%;margin-right:3%;}.by3{width:30%;margin-right:5%;}.by3x2{width:65%;margin-right:5%;}.by5{width:16%;margin-right:5%;}.by5x2{width:37%;margin-right:5%;}.by5x3{width:58%;margin-right:5%;}.by5x4{width:79%;margin-right:5%;}.return{_left:-3px;margin-right:0;_margin-right:-3px;_position:relative;_zoom:1;}.then_blow{float:right;}.Divide.alone{margin-right:.7em;}.Divide.then_blow.alone{margin-left:.7em;}
 
 /* OBJECTS */
 
@@ -45,7 +38,7 @@ ins{text-decoration:none;}del{text-decoration:line-through;}/*Define styles*/
 
 .center{text-align:center;}.cramped{padding:0 80px;}.hidden{display:none;}.left{text-align:left;}.narrowed{padding:0 40px;}.nobottom{margin-bottom:0;}.right{text-align:right;}.top{margin-top:1em;}
 /* Writing Styles */
-.write_fancy{}
+.write_fancy{color:#999;font:italic 1em Georgia,serif;text-indent:2em;}
 .write_highlighted{background-color:#ffc;padding-left:2em;padding-right:2em;}
 .write_legal{font-size:.7em;line-height:1.1em;}
 
