--- a/chunks.css
+++ b/chunks.css
@@ -1,83 +1,1 @@
-/*
-(c) 2009, Jeremy Pinat. All rights reserved.
-http://www.deime.net/prismatic
-*/
-
-/* BEAUTIFUL SHY RESET */
-address,blockquote,body,caption,code,dd,del,div,dl,dt,fieldset,form,html,h1,h2,h3,h4,h5,h6,iframe,img,input,ins,legend,li,object,p,pre,table,tbody,td,textarea,tfoot,th,thead,tr{line-height:1.4em;margin:0;padding:0;}
-ol,ul{margin-top:0;margin-bottom:0;}body,legend{background:#fff;color:#222;font:normal 1em "Trebuchet MS",sans-serif;line-height:1em;}h1{color:#000;font-size:3.0em;letter-spacing:-.05em;}h2{color:#262626;font-size:1.8em;}h3{color:#4C4C4C;font-size:1.3em;}h4{color:#737373;font-size:1.1em;}h5{color:#999;font-size:1.0em;}h6{color:#BFBFBF;font-size:0.9em;letter-spacing:.1em;}h1,h2,h3,h4,h5,h6{font-weight:bold;line-height:1em;margin-bottom:0.5em;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}code,kbd,samp,tt{font-family:monaco,monospace;font-size:.75em;line-height:1em;}pre{background-color:#eee;overflow:auto;overflow-y:hidden;padding:1em;}table{border-collapse:collapse;border-spacing:0;}blockquote:before,blockquote:after,q:before,q:after{content:'';}blockquote,q{quotes:none;}
-q{font:italic 1em Georgia,serif;}blockquote{text-indent:2em;margin-left:2em;margin-right:2em;}
-
-hr{border-width:0;border-bottom:.18em dashed #0cf;margin-top:2em;margin-bottom:1em;}/*???*/
-a{color:#0c9;font-weight:bold;text-decoration:none;}a:hover{color:#000;}/*Change the hover color*/
-abbr,acronym{border:0;font-variant:normal;}/*???*/
-button,input,select,textarea{font-family:inherit;font-size:inherit;font-weight:inherit;}
-fieldset,img{border:0;}
-address,caption,cite,code,dfn,th,var{font-style:normal;font-weight:normal;}
-ins{text-decoration:none;}del{text-decoration:line-through;}/*Define styles*/
-blockquote,dl,ol,p,pre,q,ul{margin-bottom:.8em;}
-
-
-/* LAYOUT SYSTEM */
-.Wrapper, .Chunk, .clearfix {
-	_zoom: 1;
-}
-.Wrapper:after, .Chunk:after, .clearfix:after {
-	clear: both;
-	content: ".";
-	display: block;
-	height: 0;
-	visibility: hidden;
-}
-.Wrapper {
-	margin: 0 auto;
-	padding: 0 5px;
-	_width: 950px;
-	max-width: 950px;
-}
-.fluid {
-	padding: 0 2%;
-	width: 96%;
-}
-.Wrapper>.inner {
-	padding: 0 10px;
-	width: auto;
-} /* keep or not? */
-.Chunk {
-	margin: 0 auto 1em;
-}
-.Divide {
-	float: left;
-	_zoom: 1;
-}
-.by2 { width: 47.5%; margin-right: 5%; }
-.by3 { width: 30%; margin-right: 5%; }
-.by3x2 { width: 65%; margin-right: 5%; }
-.by5 { width: 16%; margin-right: 5%; }
-.by5x2 { width: 37%; margin-right: 5%; }
-.by5x3 { width: 58%; margin-right: 5%; }
-.by5x4 { width: 79%; margin-right: 5%; }
-.return {
-	_left: -3px;
-	margin-right: 0;
-	_margin-right: -3px;
-	_position: relative;
-	_zoom: 1;
-}
-.then_blow { float: right; }
-.then_center { float: none; margin-left: auto; margin-right: auto; }
-.Divide.alone { margin-right: .7em; }
-.Divide.then_blow.alone { margin-left: .7em; }
-
-._3
-
-/* GENERIC RULES */
-
-.center { text-align: center; }
-.cramped { padding: 0 80px; }
-.hidden { display: none; }
-.left { text-align: left; }
-.narrowed { padding: 0 40px; }
-.nobottom { margin-bottom: 0; }
-.right { text-align: right; }
-.top { margin-top: 1em; }
+/* (c) 2009, Jeremy Pinat. All rights reserved. http://www.deime.net/prismatic */ address,blockquote,body,caption,code,dd,del,div,dl,dt,fieldset,form,html,h1,h2,h3,h4,h5,h6,iframe,img,input,ins,legend,li,object,p,pre,table,tbody,td,textarea,tfoot,th,thead,tr{line-height:1.4em;margin:0;padding:0}ol,ul{margin-top:0;margin-bottom:0}body,legend{background:#fff;color:#222;font:normal 1em sans-serif;line-height:1em}h1{color:#000;font-size:3.0em;letter-spacing:-.05em}h2{color:#262626;font-size:1.8em}h3{color:#4C4C4C;font-size:1.3em}h4{color:#737373;font-size:1.1em}h5{color:#999;font-size:1.0em}h6{color:#BFBFBF;font-size:0.9em;letter-spacing:.1em}h1,h2,h3,h4,h5,h6{font-weight:bold;line-height:1em;margin-bottom:0.5em}sup{vertical-align:text-top}sub{vertical-align:text-bottom}code,kbd,samp,tt{font-family:monaco,monospace;font-size:.75em;line-height:1em}pre{background-color:#eee;overflow:auto;overflow-y:hidden;padding:1em}table{border-collapse:collapse;border-spacing:0}blockquote:before,blockquote:after,q:before,q:after{content:''}blockquote,q{quotes:none}q{font:italic 1em Georgia,serif}blockquote{text-indent:2em;margin-left:2em;margin-right:2em}a{color:#00d}a:hover{text-decoration:none}abbr,acronym{border:0;font-variant:normal}/*???*/button,input,select,textarea{font-family:inherit;font-size:inherit;font-weight:inherit}fieldset,img{border:0}address,caption,cite,code,dfn,th,var{font-style:normal;font-weight:normal}ins{text-decoration:none}del{text-decoration:line-through}/*Define styles*/blockquote,dl,ol,p,pre,q,ul{margin-bottom:.8em}.Wrapper, .Chunk, .clearfix{_zoom:1;}.Wrapper:after, .Chunk:after, .clearfix:after{clear:both;content:".";display:block;height:0;visibility:hidden;}.Wrapper{margin:1em auto 0;padding:0 5px;_width:950px;max-width:950px;}.fluid{padding:0 2%;width:96%;}.Wrapper>.inner{padding:0 10px;width:auto;} /* keep or not? */.Chunk{margin:0 auto 1em;}.Chunk>.Chunk{margin-bottom:0;}.Chunk+.Chunk{margin-top:1em;}.divide{float:left;_zoom:1;}.divide+.divide{margin-top:0;}.divide.by2{width:48.5%;margin-right:3%}.divide.by3{width:30%;margin-right:5%}.divide.by3x2{width:65%;margin-right:5%}.divide.by5{width:16%;margin-right:5%}.divide.by5x2{width:37%;margin-right:5%}.divide.by5x3{width:58%;margin-right:5%}.divide.by5x4{width:79%;margin-right:5%}.divide.return{_left:-3px;margin-right:0;_margin-right:-3px;_position:relative;_zoom:1;}.divide.then_blow{float:right}.divide.then_center{float:none;margin-left:auto;margin-right:auto}.divide.alone{margin-right:.7em}.divide.then_blow.alone{margin-left:.7em}.cramped{padding:0 80px}.hidden{display:none}.narrowed{padding:0 40px}.nobottom{margin-bottom:0}
