--- a/src.css
+++ b/src.css
@@ -45,21 +45,23 @@ blockquote,dl,ol,p,pre,q,ul{margin-bottom:.8em;}
 
 .divide {
 	float: left;
+	margin-right: 5%;
 	_zoom: 1;
 }
 .divide + .divide {
 	margin-top: 0;
 }
-.divide.by2 { width: 47.5%; margin-right: 5%; }
-.divide.by3 { width: 30%; margin-right: 5%; }
-.divide.by3x2 { width: 65%; margin-right: 5%; }
-.divide.by4 { width: 21.25%; margin-right: 5%; }
-.divide.by4x2 { width: 47.5%; margin-right: 5%; }
-.divide.by4x3 { width: 73.75%; margin-right: 5%; }
-.divide.by5 { width: 16%; margin-right: 5%; }
-.divide.by5x2 { width: 37%; margin-right: 5%; }
-.divide.by5x3 { width: 58%; margin-right: 5%; }
-.divide.by5x4 { width: 79%; margin-right: 5%; }
+
+.divide.by2 { width: 47.5%; }
+.divide.by3 { width: 30%; }
+.divide.by3x2 { width: 65%; }
+.divide.by4 { width: 21.25%; }
+.divide.by4x2 { width: 47.5%; }
+.divide.by4x3 { width: 73.75%; }
+.divide.by5 { width: 16%; }
+.divide.by5x2 { width: 37%; }
+.divide.by5x3 { width: 58%; }
+.divide.by5x4 { width: 79%; }
 .divide.return {
 	_left: -3px;
 	margin-right: 0;
@@ -69,8 +71,6 @@ blockquote,dl,ol,p,pre,q,ul{margin-bottom:.8em;}
 }
 .divide.then_blow { float: right; }
 .divide.then_center { float: none; margin-left: auto; margin-right: auto; }
-.divide.alone { margin-right: .7em; }
-.divide.then_blow.alone { margin-left: .7em; }
 
 /* GENERIC RULES */
 
