--- a/src.css
+++ b/src.css
@@ -3,7 +3,6 @@
 http://www.deime.net/chunks
 */
 
-/* LAYOUT SYSTEM */
 .Wrapper, .Chunk, .clearfix {
 	_zoom: 1;
 }
@@ -14,6 +13,8 @@ http://www.deime.net/chunks
 	height: 0;
 	visibility: hidden;
 }
+
+/* Wrapper */
 .Wrapper {
 	margin: 1em auto 0;
 	padding: 0 5px;
@@ -23,6 +24,8 @@ http://www.deime.net/chunks
 .fluid {
 	width: 96%;
 }
+
+/* Chunk */
 .Chunk {
 	display: block;
 	margin: 0 auto 1em;
@@ -43,16 +46,16 @@ http://www.deime.net/chunks
 	margin-top: 0;
 }
 
-.divide.by2 { width: 47.5%; }
-.divide.by3 { width: 30%; }
-.divide.by3x2 { width: 65%; }
-.divide.by4 { width: 21.25%; }
-.divide.by4x2 { width: 47.5%; }
-.divide.by4x3 { width: 73.75%; }
-.divide.by5 { width: 16%; }
-.divide.by5x2 { width: 37%; }
-.divide.by5x3 { width: 58%; }
-.divide.by5x4 { width: 79%; }
+.by2 { width: 47.5%; }
+.by3 { width: 30%; }
+.by3x2 { width: 65%; }
+.by4 { width: 21.25%; }
+.by4x2 { width: 47.5%; }
+.by4x3 { width: 73.75%; }
+.by5 { width: 16%; }
+.by5x2 { width: 37%; }
+.by5x3 { width: 58%; }
+.by5x4 { width: 79%; }
 .divide.return {
 	_left: -3px;
 	margin-right: 0;
@@ -66,7 +69,6 @@ http://www.deime.net/chunks
 /* GENERIC RULES */
 
 .center { text-align: center; }
-img.center { display: block; margin-left: auto; margin-right: auto; }
 .cramped { padding: 0 80px; }
 .hidden { display: none; }
 .narrowed { padding: 0 40px; }
