Fixed .nobottom, now it acts as expected on slibings Chunks

--- a/src.css
+++ b/src.css
@@ -55,3 +55,4 @@ http://www.deime.net/chunks
 .hidden { display: none; }
 .narrowed { padding: 0 40px; }
 .nobottom { margin-bottom: 0; }
+.Chunk + .Chunk.nobottom { margin-top: 0em; }
